--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,11 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(
 
+
         main.c
         Day_1.c
         Day_2.c
         Day_3.c
         main.c
-        FileBuffer.c
+        Utility.c
 )
