--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,14 @@
 cmake_minimum_required(VERSION 3.27)
+
+MATH(EXPR stack_size "80000 * 1024 * 1024") # 10000 Mb
+set(CMAKE_EXE_LINKER_FLAGS "-Wl,--stack,${stack_size}")
+
 project(untitled1 C)
 
+
 set(CMAKE_C_STANDARD 11)
+
+
 
 add_executable(
 
@@ -13,4 +20,6 @@ add_executable(
         main.c
         Utility.c
         Day_4.c
+        Day_5.c
+        Day_6.c
 )
